2008-11-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/gstplay.c,
	src/betaradio.c: Polish icon flash timing.

2008-11-27  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/gstplay.c,
	src/gstplay.h,
	src/betaradio.c: Add GstPlayer for GStreamer.

2008-11-18  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* autogen.sh: Update autogen.sh and add libtool initialize.

2008-10-20  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/sitelist.h: update the source url.
	* src/sitelist.h: update the source url.

2008-09-01  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/channel.c: update the source url.

2008-07-06  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/channel.c: Update the source url.

2008-05-01	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/sitelist.h: Update radio site list.

2008-04-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* TODO,
	autogen.sh: Add a TODO item.

2008-02-11	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* data/Makefile.am: Fix the bug lack of radio-on.png and radio-off.png at
	tags 0.1.2

2008-02-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* configure.ac: Bump to 0.1.2

2008-02-08	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/betaradio.c: Adjust the source code of GTK+.

2008-01-21	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* TODO: Add this to record some ideas.
	
2008-01-21	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* autogen.sh: Add this for its convenience.

2008-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/betaradio.c: Add the missing trailer 'NULL' of g_build_filename.

2008-01-14	Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
	* src/Makefile.am
	src/betaradio.c
	data/betaradio.desktop.in
	data/betaradio-on.png
	data/Makefile.am
	data/radio-off.png
	data/radio-on.png: Modify the tray icon's size and location on disk.
